--- a/bi.html
+++ b/bi.html
@@ -199,24 +199,15 @@
       <a  href="#navbar" style="text-decoration: none; display: flex; justify-content: flex-end;">
         <img id="gif" style=" height: 50px; width: auto;border-style: none; " src="res/top3.png" >
       </a> 
-    </di  
+    </div>  
      <div class="col-lg-4 col-sm-6 col-12 exerc "style="background-color: white;"><img src="res/exercice/bi/bi1.jpg" ></div>
      <div class="col-lg-4 col-sm-6 col-12 exerc "style="background-color: white;"><img src="res/exercice/bi/bi2.png" ></div>
-     <div class="col-lg-4 col-sm-6 col-12 exerc "style="background-color: white;"><img src="res/exercice/bi/bi3.png" ></div>
      <div class="col-lg-4 col-sm-6 col-12 exerc "style="background-color: white;"><img src="res/exercice/bi/bi4.png" ></div>
      <div class="col-lg-4 col-sm-6 col-12 exerc "style="background-color: white;"><img src="res/exercice/bi/bi5.png" ></div>
      <div class="col-lg-4 col-sm-6 col-12 exerc "style="background-color: white;"><img src="res/exercice/bi/bi6.png" ></div>
-     <div class="col-lg-4 col-sm-6 col-12 exerc "style="background-color: white;"><img src="res/exercice/bi/bi7.png" ></div>
-     <div class="col-lg-4 col-sm-6 col-12 exerc "style="background-color: white;"><img src="res/exercice/bi/bi8.png" ></div>
      <div class="col-lg-4 col-sm-6 col-12 exerc "style="background-color: white;"><img src="res/exercice/bi/bi9.png" ></div>
-     <div class="col-lg-4 col-sm-6 col-12 exerc "style="background-color: white;"><img src="res/exercice/bi/bi10.png" ></div>
-     <div class="col-lg-4 col-sm-6 col-12 exerc "style="background-color: white;"><img src="res/exercice/bi/bi11.png" ></div>
-     <div class="col-lg-4 col-sm-6 col-12 exerc "style="background-color: white;"><img src="res/exercice/bi/bi12.png" ></div>
      <div class="col-lg-4 col-sm-6 col-12 exerc "style="background-color: white;"><img src="res/exercice/bi/bi13.png" ></div>
-     <div class="col-lg-4 col-sm-6 col-12 exerc "style="background-color: white;"><img src="res/exercice/bi/bi14.png" ></div>
      <div class="col-lg-4 col-sm-6 col-12 exerc "style="background-color: white;"><img src="res/exercice/bi/bi15.png" ></div>
-     <div class="col-lg-4 col-sm-6 col-12 exerc "style="background-color: white;"><img src="res/exercice/bi/bi16.png" ></div>
-     <div class="col-lg-4 col-sm-6 col-12 exerc "style="background-color: white;"><img src="res/exercice/bi/bi17.png" ></div>
     </div>
 </body>
 <script src="https://www.gstatic.com/firebasejs/7.5.0/firebase-app.js"></script>
