--- a/pec.html
+++ b/pec.html
@@ -199,12 +199,12 @@
       <a  href="#navbar" style="text-decoration: none; display: flex; justify-content: flex-end;">
         <img id="gif" style=" height: 50px; width: auto;border-style: none; " src="res/top3.png" >
       </a> 
-    </di 
-    <div class="col-lg-4 col-sm-6 col-12 exerc "style="background-color: white;"><img src="res/exercice/pec/pec1.jpg" ></div>
+    </div> 
     <div class="col-lg-4 col-sm-6 col-12 exerc "style="background-color: white;"><img src="res/exercice/pec/pec2.png" ></div>
     <div class="col-lg-4 col-sm-6 col-12 exerc "style="background-color: white;"><img src="res/exercice/pec/pec3.jpg" ></div>
     <div class="col-lg-4 col-sm-6 col-12 exerc "style="background-color: white;"><img src="res/exercice/pec/pec4.jpg" ></div>
     <div class="col-lg-4 col-sm-6 col-12 exerc "style="background-color: white;"><img src="res/exercice/pec/pec5.png" ></div>
+    <div class="col-lg-4 col-sm-6 col-12 exerc "style="background-color: white;"><img src="res/exercice/pec/pec6.jpg" ></div>
   </div>
    
 </body>
