--- a/tri.html
+++ b/tri.html
@@ -199,21 +199,14 @@
       <a  href="#navbar" style="text-decoration: none; display: flex; justify-content: flex-end;">
         <img id="gif" style=" height: 50px; width: auto;border-style: none; " src="res/top3.png" >
       </a> 
-    </di    <div class="col-lg-4 col-sm-6 col-12 exerc "style="background-color: white;"><img src="res/exercice/tri/tri1.jpg" ></div>
-    <div class="col-lg-4 col-sm-6 col-12 exerc "style="background-color: white;"><img src="res/exercice/tri/tri2.png" ></div>
+    </div>
+    <div class="col-lg-4 col-sm-6 col-12 exerc "style="background-color: white;"><img src="res/exercice/tri/tri1.jpg" ></div>
     <div class="col-lg-4 col-sm-6 col-12 exerc "style="background-color: white;"><img src="res/exercice/tri/tri3.png" ></div>
-    <div class="col-lg-4 col-sm-6 col-12 exerc "style="background-color: white;"><img src="res/exercice/tri/tri4.png" ></div>
     <div class="col-lg-4 col-sm-6 col-12 exerc "style="background-color: white;"><img src="res/exercice/tri/tri5.png" ></div>
-    <div class="col-lg-4 col-sm-6 col-12 exerc "style="background-color: white;"><img src="res/exercice/tri/tri6.png" ></div>
     <div class="col-lg-4 col-sm-6 col-12 exerc "style="background-color: white;"><img src="res/exercice/tri/tri7.png" ></div>
-    <div class="col-lg-4 col-sm-6 col-12 exerc "style="background-color: white;"><img src="res/exercice/tri/tri8.png" ></div>
-    <div class="col-lg-4 col-sm-6 col-12 exerc "style="background-color: white;"><img src="res/exercice/tri/tri9.png" ></div>
-    <div class="col-lg-4 col-sm-6 col-12 exerc "style="background-color: white;"><img src="res/exercice/tri/tri10.png" ></div>
     <div class="col-lg-4 col-sm-6 col-12 exerc "style="background-color: white;"><img src="res/exercice/tri/tri11.png" ></div>
     <div class="col-lg-4 col-sm-6 col-12 exerc "style="background-color: white;"><img src="res/exercice/tri/tri12.png" ></div>
-    <div class="col-lg-4 col-sm-6 col-12 exerc "style="background-color: white;"><img src="res/exercice/tri/tri13.png" ></div>
     <div class="col-lg-4 col-sm-6 col-12 exerc "style="background-color: white;"><img src="res/exercice/tri/tri14.png" ></div>
-    <div class="col-lg-4 col-sm-6 col-12 exerc "style="background-color: white;"><img src="res/exercice/tri/tri15.png" ></div>
     <div class="col-lg-4 col-sm-6 col-12 exerc "style="background-color: white;"><img src="res/exercice/tri/tri16.png" ></div>
     <div class="col-lg-4 col-sm-6 col-12 exerc "style="background-color: white;"><img src="res/exercice/tri/tri17.png" ></div>
     <div class="col-lg-4 col-sm-6 col-12 exerc "style="background-color: white;"><img src="res/exercice/tri/tri18.png" ></div>
