--- a/prix.html
+++ b/prix.html
@@ -230,7 +230,8 @@
               </div>
               <p>Pour chaque abonnement il faut ajouter 10d pour la carte d'accées</p>
                </form>
-               <div style="width: 100%; border-style: solid; border-color: rgb(56, 56, 56);border-width: 2px;"></div<table >
+               <div style="width: 100%; border-style: solid; border-color: rgb(56, 56, 56);border-width: 2px;"></div>
+               <table >
   <tr> <td>  <h5>Merci de remplire ce formulaire si-dessous et nous vous appellerons pour confirmer votre abonnement</h5> </tr> </td>
   <tr> <td>  <h6>Votre navigateur vas utilisez votre boite e-mail pour nous envoyer les information necessaire pour vous contactez</h6> </tr> </td>
   <tr> <td> <b>Nom : </b> </tr> </td> 
