--- a/contact.html
+++ b/contact.html
@@ -208,8 +208,8 @@
     <div class="col-0 col-sm-1 col-md-2"></div>
     <div
       class="col-12 col-sm-10 col-md-8 " >
-       <p style="text-align: center; color: rgba(0, 0, 0, 0.95); font-weight: 900; font-size: 120%;">Vous pouvez suivre ce plan pour vous rendre à <strong style="color: black;text-decoration-style: solid;text-decoration-line: underline;">IRON GYM</strong> ou recherchez <br> <strong style="color: black;text-decoration-style: solid;text-decoration-line: underline;">IRON GYM HAMMAM SOUSSE</strong> sur google Maps </p><br>
-       <p style="text-align: center;color: rgba(0, 0, 0, 0.95); font-weight: 900; font-size: 120%;">Pour plus de renseignement vous pouvez appeler le <strong  style="color: black;text-decoration-style: solid;text-decoration-line: underline;";">54 123 899</strong></p>
+       <p style="text-align: center; color: white; font-weight: 900; font-size: 120%;">Vous pouvez suivre ce plan pour vous rendre à <strong style="color: white;text-decoration-style: double;text-decoration-line: underline; text-decoration-color: black;">IRON GYM</strong> ou recherchez <br> <strong style="color: white;text-decoration-style: double;text-decoration-line: underline;text-decoration-color: black;">"IRON GYM HAMMAM SOUSSE"</strong> sur google Maps </p><br>
+       <p style="text-align: center;color: white; font-weight: 900; font-size: 120%;">Pour plus de renseignement vous pouvez appeler le <strong  style="color: white;text-decoration-style: double;text-decoration-line: underline;text-decoration-color: black;";">54 123 899</strong></p>
       </div>
     <div class="col-0 col-sm-1 col-md-2"></div>
       <div class="col-0 col-sm-1 col-md-2"></div>
